--- a/consultoria/src/pages/AdminAuth/AdminAuth.module.css
+++ b/consultoria/src/pages/AdminAuth/AdminAuth.module.css
@@ -207,8 +207,6 @@ select:-webkit-autofill:focus {
   }
   .form {
     min-width: 100%;
-    background: none;
-    box-shadow: none;
   }
 
   .inputContainerH2 {
